# PliegoCheck-SECOP

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .env.pilot.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  compose.notifications.yaml  compose.pilot.yaml  compose.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 142b8ab4f85d_specialized_evaluators.py  20260702_0001_manual_import.py  20260702_0002_document_extraction.py  20260702_0003_requirement_normalization.py  20260702_0004_company_profile_evidence.py  20260703_0005_financial_evaluation.py  20260703_0006_decision_engine.py  20260704_0009_decision_report_package.py  20260704_0010_operational_auth.py  20260713_0016_external_procurement.py  20260713_0017_external_currency_unknown.py  20260713_0018_external_source_row_count.py  20260713_0019_external_document_sync.py  20260713_0020_opportunity_compatibility_inbox.py  20260714_0021_opportunity_monitoring_alerts.py  20260714_0022_opportunity_monitor_document_state.py  20260714_0023_notification_delivery_outbox.py
apps/api/src/pliegocheck_api/: __init__.py  auth.py  cli.py  config.py  db.py  errors.py  file_validation.py  financial.py  main.py  middleware.py  models.py  normalization.py  prompt_registry.py  specialized_evaluation.py  storage.py
apps/api/src/pliegocheck_api/decision/: __init__.py  actions.py  coverage.py  engine.py  findings.py  manifest.py  policy.py  rules.py
apps/api/src/pliegocheck_api/external_documents/: __init__.py  download.py  providers.py  routes.py  security.py  service.py  smoke.py
apps/api/src/pliegocheck_api/external_procurement/: __init__.py  datos_abiertos.py  errors.py  providers.py  routes.py  secop_mapper.py  service.py  smoke.py
apps/api/src/pliegocheck_api/notification_delivery/: __init__.py  policy.py  providers.py  routes.py  service.py
apps/api/src/pliegocheck_api/opportunities/: __init__.py  engine.py  explanations.py  models.py  policy.py  routes.py  service.py
apps/api/src/pliegocheck_api/opportunity_monitoring/: __init__.py  alert_engine.py  change_detection.py  digest.py  models.py  routes.py  scheduling.py  service.py
apps/api/src/pliegocheck_api/reports/: __init__.py  manifest.py  (+4 more)
apps/api/tests/: conftest.py  test_api_contracts.py  test_api_health.py  test_auth_api.py  test_company_profile_api.py  test_decision_api.py  test_decision_report_api.py  test_financial_evaluation_api.py  test_notification_delivery.py  test_opportunities.py  test_opportunity_monitoring.py  test_ops.py  test_process_import.py  test_requirement_normalization_api.py  test_secop_connector.py  test_secop_document_sync.py  test_specialized_evaluations_api.py
apps/worker/: pyproject.toml
apps/worker/src/pliegocheck_worker/: __init__.py  cli.py  health.py  runner.py
apps/worker/tests/: conftest.py  test_decision_report_worker.py  test_decision_worker.py  test_extraction_worker.py  test_financial_evaluation.py  test_notification_delivery_worker.py  test_opportunity_monitoring_worker.py  test_opportunity_worker.py  test_requirement_normalization.py  test_specialized_evaluators.py  test_worker_health.py
(+361 files in other folders)
