[project]
name = "pliegocheck"
version = "0.1.0"
description = "Monorepo de PliegoCheck-SECOP (raiz virtual del workspace uv)"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["apps/api", "apps/worker", "packages/schemas"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api/src", "apps/worker/src", "packages/schemas/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
files = [
    "apps/api/src",
    "apps/api/tests",
    "apps/worker/src",
    "apps/worker/tests",
    "packages/schemas/src",
    "packages/schemas/tests",
    "packages/schemas/scripts",
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "apps/worker/tests", "packages/schemas/tests"]
addopts = ["--import-mode=importlib"]
