[project]
name = "pliegocheck-api"
version = "0.1.0"
description = "API de PliegoCheck-SECOP (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pliegocheck-schemas",
]

[tool.uv.sources]
pliegocheck-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pliegocheck_api"]
