[project]
name = "pliegocheck-api"
version = "0.1.0"
description = "API de PliegoCheck-SECOP (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pliegocheck-schemas",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "psycopg>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
]

[project.scripts]
pliegocheck-api = "pliegocheck_api.cli:main"

[tool.uv.sources]
pliegocheck-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pliegocheck_api"]
