[project]
name = "pliegocheck-worker"
version = "0.1.0"
description = "Worker de procesamiento asincrono de PliegoCheck-SECOP (esqueleto, sin cola real)"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pliegocheck-worker = "pliegocheck_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pliegocheck_worker"]
