[project]
name = "pliegocheck-worker"
version = "0.1.0"
description = "Worker de procesamiento asincrono de PliegoCheck-SECOP (esqueleto, sin cola real)"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.7",
    "openai>=2.9.0",
    "openpyxl>=3.1.5",
    "pliegocheck-api",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
]

[project.scripts]
pliegocheck-worker = "pliegocheck_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pliegocheck_worker"]

[tool.uv.sources]
pliegocheck-api = { workspace = true }
